# ebal-py

./: .gitignore  LICENSE  README.md  README_binary.md  README_continuous.md  ebal_binary.py  ebal_continuous.py  pyproject.toml
docs/: README_binary.md  README_continuous.md
ebal/: __init__.py  binary.py  continuous.py
tests/: test_binary.py  test_continuous.py
